syntax = "proto3";

package statusz;

option go_package = "github.com/explodes/serving/statusz";

service StatuszService {
  rpc GetStatus(GetStatusRequest) returns (GetStatusResponse) {}
}

message GetStatusRequest {}
message GetStatusResponse {}